--- a/lonk/templates/userview.html
+++ b/lonk/templates/userview.html
@@ -10,17 +10,37 @@
 {% endblock %} 
 
 {% block content %}
-    <div class="col-sm-4">
-        <div class="row"><p>password</p></div>
-        <div class="row"><p>password</p></div>
-        <div class="row"><p>password</p></div>
-        <div class="row"><p>password</p></div>
-        <div class="row"><p>password</p></div>
-        <div class="row"><p>password</p></div>
-        <div class="row"><p>password</p></div>
-        
-    </div>
-    <div class="col">
+<div class="container-fluid">
+    <div class="row row-offcanvas row-offcanvas-left vh-50">
+        <div class="col-md-3 col-lg-2 sidebar-offcanvas h-50 overflow-auto bg-light pl-0" id="sidebar" role="navigation">
+            <ul class="nav flex-column sticky-top pl-0 pt-5 mt-3">
+                <li class="list-group-item p-3">password</li>
+                <li class="list-group-item p-3">password</li>
+                <li class="list-group-item p-3">password</li>
+                <li class="list-group-item p-3">password</li>
+                <li class="list-group-item p-3">password</li>
+                <li class="list-group-item p-3">password</li>
+                <li class="list-group-item p-3">password</li>
+                <li class="list-group-item p-3">password</li>
+                <li class="list-group-item p-3">password</li>
+                <li class="list-group-item p-3">password</li>
+                <li class="list-group-item p-3">password</li>
+                <li class="list-group-item p-3">password</li>
+                <li class="list-group-item p-3">password</li>
+                <li class="list-group-item p-3">password</li>
+                <li class="list-group-item p-3">password</li>
+                <li class="list-group-item p-3">password</li>
+                <li class="list-group-item p-3">password</li>
+                <li class="list-group-item p-3">password</li>
+            </ul>
+        </div>
+    <div class="col mh-25">
         <h2>password content</h2>
+    </div>
+{% endblock %}
+
+{% block footer %} 
+    <div class="py-1 bg-dark text-white text-center">
+        <p>feet</p>
     </div>
 {% endblock %}
