--- a/lonk/templates/base.html
+++ b/lonk/templates/base.html
@@ -39,11 +39,13 @@
         </div>
 
         <!-- footer -->
+        {% block footer %} 
         <div class="py-5 bg-dark text-white text-center">
 
           <p>feet</p>
 
       </div>
+      {% endblock %}
 
         
     </body>
